15495 sun_fc: void operator delete(void*) called Reviewed by: Dan Cross <cross@oxidecomputer.com> Approved by: Dan McDonald <danmcd@mnx.io>